kubernetes/apps/actual/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual
  namespace: actual
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "budget.local.fordkuppp.me"
  rules:
    - backendRefs:
        - name: actual
          port: 5006
